# logicmon

./: Cargo.toml  DRAFT.md  Makefile  README.md  build.rs  monarch.js
CPS/: cps.sml
building-blocks/: cli.sml  cps.sml  memo.sml  model.sml  repl.sml  transpiled.sml
compiler/: cps.sml  types.sml
examples/: Output.al  StringCopy.al  client.rs  dl.rs
grammar/: .gitignore  opt.sml  parser.sml  poster.grm  poster.lex  sources.cm
interlocut/: Cargo.toml  README.md
interlocut/assets/: script.js
interlocut/src/: analyze.rs  main.rs
interlocut/web-editor/: index.html  package-lock.json  package.json
interlocut/web-editor/src/: main.tsx  userWorker.ts
interlocut/web-editor/src/components/: Editor.tsx
proto/: ts.proto
src/: lib.rs  main.rs
tests/: basic.sml
