[package]
name = "interlocut"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a lang dev project"
homepage = "https://handzalah.com"
# documentation = "https://docs.rs/interlocut"
repository = "https://github.com/tbmreza/interlocut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascent = "0.6.0"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tree-sitter = "0.22.5"
tree-sitter-rust = "0.21.2"
tree-sitter-utlc = { git = "https://github.com/tbmreza/tree-sitter-utlc" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
